Se implemento ServicioImpl que es geneérico y puede ingresarse en el resto de Servicios, se implementó PuestosServicioImpl y se implemento test en TestMateo. *CUIDADO: se dejó comentario en el context porque es necesario personalizar la ruta por PC*

--- a/TestMateo/TestMateo.csproj
+++ b/TestMateo/TestMateo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -15,6 +15,12 @@
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NominaPISIB.Aplicacion\NominaPISIB.Aplicacion.csproj" />
+    <ProjectReference Include="..\NominaPISIB.Dominio.Modelos\NominaPISIB.Dominio.Modelos.csproj" />
+    <ProjectReference Include="..\NominaPISIB.Dominio.Servicios\NominaPISIB.Dominio.Servicios.csproj" />
   </ItemGroup>
 
   <ItemGroup>
