Se altero la base de datos para poder hacer consultas con id autoincrementables identity  1,1 todo el codigo ya es funcional

--- a/NominaPISIB.Infraestructura.AccesoDatos/dataEFCore/efpt.config.json
+++ b/NominaPISIB.Infraestructura.AccesoDatos/dataEFCore/efpt.config.json
@@ -6,7 +6,7 @@
    "IncludeConnectionString": true,
    "ModelNamespace": null,
    "OutputContextPath": null,
-   "OutputPath": "C:\\LENGUAJES\\C#\\PISIBSistemaNomina\\NominaPISIB.Dominio.Modelos\\Entidades",
+   "OutputPath": "C:\\LENGUAJES\\C#\\PISIPSistemaNomina\\NominaPISIB.Dominio.Modelos\\Entidades",
    "PreserveCasingWithRegex": true,
    "ProjectRootNamespace": "NominaPISIB.Infraestructura.AccesoDatos",
    "Schemas": null,
