--- a/NominaPISIB.Dominio.Modelos/NominaPISIB.Dominio.Modelos.csproj
+++ b/NominaPISIB.Dominio.Modelos/NominaPISIB.Dominio.Modelos.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NominaPISIB.Aplicacion.DTO\NominaPISIB.Aplicacion.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
