modificacion de la base entidad bonificacion y descuentos

--- a/WebAppNominaPISIB/appsettings.json
+++ b/WebAppNominaPISIB/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "ConeccionBaseNomina": "Data Source=(localdb)\\leo;Initial Catalog=NominaPisip;Integrated Security=True;Encrypt=True"
+
+    },
   "AllowedHosts": "*"
 }
