modificacion se implementan controllers

--- a/Nomina.API/appsettings.json
+++ b/Nomina.API/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        // coneccion a la base 
+        "DefaultConnection": "Data Source=(localdb)\\leo;Initial Catalog=NominaPisip;Integrated Security=True;Encrypt=True"
+
+    },
+    "AllowedHosts": "*"
+
+
 }
