--- a/Nomina.API/appsettings.json
+++ b/Nomina.API/appsettings.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
     // coneccion a la base
     "DefaultConnection": "Data Source=(localdb)\\leo;Initial Catalog=NominaPisip;Integrated Security=True;Encrypt=True",
-    //"ConnectionMateo": "Data Source=DESKTOP-NCNTGBP\\MIPRIMERSQL2024;Initial Catalog=NominaPisip;Integrated Security=True;TrustServerCertificate=True; Encrypt=True"
+    "ConnectionMateo": "Data Source=DESKTOP-NCNTGBP\\MIPRIMERSQL2024;Initial Catalog=NominaPisip;Integrated Security=True;TrustServerCertificate=True;"
 
   },
     "AllowedHosts": "*"
